refactor index.js, splitted out functions and params properly, need to render them individually and add button clicks for each method and submit abi

--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "morgan": "~1.8.1",
     "serve-favicon": "~2.4.2",
     "web3": "^0.18.4"
+  },
+  "devDependencies": {
+    "tape": "^4.6.3"
   }
 }
