--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "bundle": "browserify ./public/javascripts/buttonClickHandler > ./public/javascripts/bundle.js"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
@@ -13,9 +14,11 @@
     "jade": "~1.11.0",
     "morgan": "~1.8.1",
     "serve-favicon": "~2.4.2",
+    "superagent": "^3.5.2",
     "web3": "^0.18.4"
   },
   "devDependencies": {
+    "browserify": "^14.3.0",
     "tape": "^4.6.3"
   }
 }
