--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node ./bin/www",
     "bundle": "browserify ./public/javascripts/buttonClickHandler > ./public/javascripts/bundle.js",
-    "watch": "watchify ./public/javascripts/buttonClickHandler -o ./public/javascripts/bundle.js"
+    "watch": "watchify ./public/javascripts/buttonClickHandler -o ./public/javascripts/bundle.js",
+    "test" : "node ./tests/*.js"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
