--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "bundle": "browserify ./public/javascripts/EventHandler > ./public/javascripts/bundle.js",
-    "watch": "watchify ./public/javascripts/EventHandler -o ./public/javascripts/bundle.js",
+    "bundle": "watchify ./public/javascripts/EventHandler -o ./public/javascripts/bundle.js",
     "test": "node ./tests/*.js"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
+    "ethereumjs-util": "^5.2.0",
     "express": "~4.15.2",
     "jade": "~1.11.0",
     "knex": "^0.12.9",
