--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "ethereumjs-util": "^5.2.0",
+    "evm": "^0.2.0",
     "express": "~4.15.2",
     "jade": "~1.11.0",
     "knex": "^0.12.9",
